[package]
name = "yeast"
version = "0.1.0"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
corona = { version = "~0.4.2", features = ["blocking-wrappers"] }
either = "~1"
env_logger = "0.9"
failure = "0.1"
futures = "0.1"
itertools = "0.8"
log = "0.4"
rand = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "0.1"

[profile.dev]
panic = "abort"
